--- a/GeoQuiz/app/src/main/res/layout/activity_main.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
         android:layout_gravity="center"
-        android:text="@string/question_text" />
+        tools:text="@string/question_australia"/>
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
