--- a/GeoQuiz/app/src/main/res/layout-land/activity_main.xml
+++ b/GeoQuiz/app/src/main/res/layout-land/activity_main.xml
@@ -13,6 +13,15 @@
         tools:text="@string/question_australia"/>
 
     <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/cheat_button"
+        />
+
+    <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
